2005-05-14  Per Bothner  <per@bothner.com>

	* StaticFieldLocation.java (get): Setting value field from result
	of super.get violates latter's invariant.

2005-04-20  Per Bothner  <per@bothner.com>

	* FieldLocation.java (setup): Call super.setup() to set rfield.

	* ClassMemberLocation.java (setup): Use initCause to set cause, if
	use:java.lang.Throwable.getCause PreProcess keyword is set (default).

2005-03-29  Per Bothner  <per@bothner.com>

	* FieldLocation.java (isIndirectLocation): Make public - for require.
	(getDeclaration): Get declaration via ModuleInfo.

2005-03-28  Per Bothner  <per@bothner.com>

	* SlotGet.java (field, staticField): Make fields final.
	* SlotGet.java (compile): Remove ineffective/obsolete test for
	indirection if Symbol - was never updated to use Location.
	(apply): Remove extra indirection if Location.
	* SlotSet.java (apply, compile): Likewise.

2005-03-24  Per Bothner  <per@bothner.com>

	* FieldLocation.java (getField, getFType): New methods.

	* FieldLocation.java (getDeclaration): Do setKindFlags if needed.

2005-03-23  Per Bothner  <per@bothner.com>

	* FieldLocation.java (PROCEDURE, SYNTAX, KIND_FLAGS_SET): New flags.
	(setProcedure, setSyntax): Also set CONSTANT and KIND_FLAGS_SET.
	(setKindFlags): New function.
	(isProcedureOrSyntax, getDeclaration, setup): Use setKindFlags.
	(isConstant, isBound):  Use setKindFlags to avoid loading class..

2005-03-16  Per Bothner  <per@bothner.com>

	* ClassMemberLocation.java (defineAll): Skip PRIVATE_PREFIX and
	"*$instance" fields.

2005-03-11  Per Bothner  <per@bothner.com>

	* FieldLocation.java (PROCEDURE, SYNTAX): New constants.
	(setup): Tweak accordingly.
	(setProcedure, setSyntax, isProcedureOrSyntax): New methods.
	* StaticFieldLocation.java (define): Return StaticFieldLocation.

2005-03-07  Per Bothner  <per@bothner.com>

	* InstanceOf.java: Update Interpreter -> Language.

2005-03-04  Per Bothner  <per@bothner.com>

	* ClassMemberLocation.java: Update Interpreter -> Language.