@@ -1,3 +1,9 @@
+2005-05-17  Per Bothner  <per@bothner.com>
+
+	* Invoke.java (inline): Fix logic error in okCount==0 case.
+	(append): New private jeper method.
+	(inline): Use append to format warnings.
+
 2005-05-14  Per Bothner  <per@bothner.com>
 
 	* StaticFieldLocation.java (get): Setting value field from result
